--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1341,23 +1341,23 @@ main {
 	position: relative;
 	top: 2px;
 }
-.like-com li span {
-	color: #ffffff;
-	font-size: 13px;
-	width: 30px;
-	height: 30px;
-	background-color: #e44d3a;
-	line-height: 30px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	-ms-border-radius: 30px;
-	-o-border-radius: 30px;
-	border-radius: 30px;
-	float: left;
-	text-align: center;
-	font-weight: 600;
-	margin-left: -25px;
-}
+/*.like-com li span {*/
+/*	color: #ffffff;*/
+/*	font-size: 13px;*/
+/*	width: 30px;*/
+/*	height: 30px;*/
+/*	background-color: #e44d3a;*/
+/*	line-height: 30px;*/
+/*	-webkit-border-radius: 30px;*/
+/*	-moz-border-radius: 30px;*/
+/*	-ms-border-radius: 30px;*/
+/*	-o-border-radius: 30px;*/
+/*	border-radius: 30px;*/
+/*	float: left;*/
+/*	text-align: center;*/
+/*	font-weight: 600;*/
+/*	margin-left: -25px;*/
+/*}*/
 .like-com li .com {
 	position: relative;
 	top: -9px;
